k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desafio-app
  template:
    metadata:
      labels:
        app: desafio-app
    spec:
      containers:
        - name: desafio-app
          image: desafio-app:latest
          ports:
            - containerPort: 3000
