k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-app
spec:
  selector:
    app: desafio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
